--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -145,14 +145,14 @@ msgstr "Om dette websted"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_da"
 
-msgid "Language policy"
-msgstr "Sprogpolitik"
-
 msgid "Languages on our websites"
 msgstr "Sprog på vores websites"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_da"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_da"
 
 msgid "Privacy policy"
 msgstr "Databeskyttelsespolitik"
