--- a/translations/oe_corporate_blocks-de.po
+++ b/translations/oe_corporate_blocks-de.po
@@ -148,14 +148,14 @@ msgstr "Über diese Website"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_de"
 
-msgid "Language policy"
-msgstr "Sprachenpolitik"
-
 msgid "Languages on our websites"
 msgstr "Sprachen auf unseren Websites"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_de"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_de"
 
 msgid "Privacy policy"
 msgstr "Schutz der Privatsphäre"
