--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -145,14 +145,14 @@ msgstr "Sobre este sitio"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_es"
 
-msgid "Language policy"
-msgstr "Política lingüística"
-
 msgid "Languages on our websites"
 msgstr "Idiomas en nuestros sitios web"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_es"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_es"
 
 msgid "Privacy policy"
 msgstr "Política de privacidad"
