--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -142,14 +142,14 @@ msgstr "Selle saidi kohta"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_et"
 
-msgid "Language policy"
-msgstr "Keelepoliitika"
-
 msgid "Languages on our websites"
 msgstr "Keeled meie veebisaitidel"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_et"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_et"
 
 msgid "Privacy policy"
 msgstr "Isikuandmete kaitse"
