--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -145,14 +145,14 @@ msgstr "Tietoa sivustosta"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_fi"
 
-msgid "Language policy"
-msgstr "Kielipolitiikka"
-
 msgid "Languages on our websites"
 msgstr "Sivustojen kielivalikoima"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_fi"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_fi"
 
 msgid "Privacy policy"
 msgstr "Tietosuojaperiaatteet"
