--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -146,14 +146,14 @@ msgstr "A honlapról"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_hu"
 
-msgid "Language policy"
-msgstr "Nyelvpolitika"
-
 msgid "Languages on our websites"
 msgstr "Nyelvek a weboldalainkon"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_hu"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_hu"
 
 msgid "Privacy policy"
 msgstr "Adatvédelem"
