--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -142,14 +142,14 @@ msgstr "Informazioni sul sito"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_it"
 
-msgid "Language policy"
-msgstr "Politica linguistica"
-
 msgid "Languages on our websites"
 msgstr "Le lingue sui nostri siti web"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_it"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_it"
 
 msgid "Privacy policy"
 msgstr "Politica in materia di privacy"
