--- a/translations/oe_corporate_blocks-lt.po
+++ b/translations/oe_corporate_blocks-lt.po
@@ -145,14 +145,14 @@ msgstr "Apie šią svetainę"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_lt"
 
-msgid "Language policy"
-msgstr "Kalbų politika"
-
 msgid "Languages on our websites"
 msgstr "Kalbos mūsų interneto svetainėse"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_lt"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_lt"
 
 msgid "Privacy policy"
 msgstr "Privatumo politika"
