--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -145,14 +145,14 @@ msgstr "Par šo vietni"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_lv"
 
-msgid "Language policy"
-msgstr "Valodu politika"
-
 msgid "Languages on our websites"
 msgstr "Valodas mūsu tīmekļvietnēs"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_lv"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_lv"
 
 msgid "Privacy policy"
 msgstr "Privātuma aizsardzība"
