--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -145,14 +145,14 @@ msgstr "Dwar dan is-sit"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_mt"
 
-msgid "Language policy"
-msgstr "Politika dwar il-lingwa"
-
 msgid "Languages on our websites"
 msgstr "Il-lingwi fuq is-siti web tagħna"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_mt"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_mt"
 
 msgid "Privacy policy"
 msgstr "Politika ta’ privatezza"
