--- a/translations/oe_corporate_blocks-nl.po
+++ b/translations/oe_corporate_blocks-nl.po
@@ -145,14 +145,14 @@ msgstr "Over deze site"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_nl"
 
-msgid "Language policy"
-msgstr "Talenbeleid op de Europa-website"
-
 msgid "Languages on our websites"
 msgstr "Talen op onze websites"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_nl"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_nl"
 
 msgid "Privacy policy"
 msgstr "Privacybeleid"
