--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -142,14 +142,14 @@ msgstr "Acerca deste sítio"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_pt"
 
-msgid "Language policy"
-msgstr "Política em matéria de línguas"
-
 msgid "Languages on our websites"
 msgstr "Línguas dos nossos websites"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_pt"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_pt"
 
 msgid "Privacy policy"
 msgstr "Política de privacidade"
