--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -142,14 +142,14 @@ msgstr "O tejto lokalite"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_sk"
 
-msgid "Language policy"
-msgstr "Jazyková politika"
-
 msgid "Languages on our websites"
 msgstr "Jazyky na našich webových stránkach"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_sk"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_sk"
 
 msgid "Privacy policy"
 msgstr "Politika ochrany osobných údajov"
