--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -139,14 +139,14 @@ msgstr "O spletišču"
 msgid "https://europa.eu/european-union/abouteuropa_en"
 msgstr "https://europa.eu/european-union/abouteuropa_sl"
 
-msgid "Language policy"
-msgstr "Jezikovna politika"
-
 msgid "Languages on our websites"
 msgstr "Jeziki na naših spletiščih"
 
 msgid "https://european-union.europa.eu/languages-our-websites_en"
 msgstr "https://european-union.europa.eu/languages-our-websites_sl"
+
+msgid "https://commission.europa.eu/languages-our-websites_en"
+msgstr "https://commission.europa.eu/languages-our-websites_sl"
 
 msgid "Privacy policy"
 msgstr "Politika varstva zasebnost"
