EWPP-3718: Change EC footer News link label to Press Corner.

--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -333,3 +333,6 @@ msgstr "https://commission.europa.eu/legal-notice_bg"
 
 msgid "Social media"
 msgstr "Социални медии"
+
+msgid "Press Corner"
+msgstr "Кът за медиите"
