--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -321,3 +321,6 @@ msgstr "https://commission.europa.eu/legal-notice_da"
 
 msgid "Social media"
 msgstr "Sociale medier"
+
+msgid "Press Corner"
+msgstr "Pressehjørnet"
