--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -324,3 +324,6 @@ msgstr "https://commission.europa.eu/legal-notice_et"
 
 msgid "Social media"
 msgstr "Sotsiaalmeedia"
+
+msgid "Press Corner"
+msgstr "Pressinurk"
