--- a/translations/oe_corporate_blocks-fr.po
+++ b/translations/oe_corporate_blocks-fr.po
@@ -324,3 +324,6 @@ msgstr "https://commission.europa.eu/legal-notice_fr"
 
 msgid "Social media"
 msgstr "Réseaux sociaux"
+
+msgid "Press Corner"
+msgstr "Coin presse"
