--- a/translations/oe_corporate_blocks-hr.po
+++ b/translations/oe_corporate_blocks-hr.po
@@ -324,3 +324,6 @@ msgstr "https://commission.europa.eu/legal-notice_hr"
 
 msgid "Social media"
 msgstr "Društvene mreže"
+
+msgid "Press Corner"
+msgstr "Kutak za medije"
