--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -324,3 +324,6 @@ msgstr "Consiglio dell'Unione europea"
 
 msgid "Social media"
 msgstr "Social media"
+
+msgid "Press Corner"
+msgstr "L'angolo della stampa"
