--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -324,3 +324,6 @@ msgstr "Conselho da União Europeia"
 
 msgid "Social media"
 msgstr "Redes sociais"
+
+msgid "Press Corner"
+msgstr "Espaço da imprensa"
