--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -321,3 +321,6 @@ msgstr "https://commission.europa.eu/legal-notice_sk"
 
 msgid "Social media"
 msgstr "Sociálne médiá"
+
+msgid "Press Corner"
+msgstr "Tlačový kútik"
