--- a/translations/oe_corporate_blocks-nl.po
+++ b/translations/oe_corporate_blocks-nl.po
@@ -321,3 +321,6 @@ msgstr "https://commission.europa.eu/legal-notice_nl"
 
 msgid "Social media"
 msgstr "Sociale media"
+
+msgid "Press Corner"
+msgstr "Pershoek"
