--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -324,3 +324,6 @@ msgstr "https://commission.europa.eu/legal-notice_pl"
 
 msgid "Social media"
 msgstr "Media społecznościowe"
+
+msgid "Press Corner"
+msgstr "Serwis prasowy"
