--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -321,3 +321,6 @@ msgstr "https://commission.europa.eu/legal-notice_sl"
 
 msgid "Social media"
 msgstr "Družbeni mediji"
+
+msgid "Press Corner"
+msgstr "Tiskovni kotiček"
